--- a/configs/train/adult_base.yml
+++ b/configs/train/adult_base.yml
@@ -5,8 +5,9 @@ name: adult-base
 # dir
 data_dir: ../dataset/adult/adult.data
 #resume: ''
-#resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
-save: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/
+resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v3/best.pth.tar
+# 从V3开始，正式进入论文的实验阶段
+save: /data/yangjirui/vfl-tab-reconstruction/model/adult/v3/
 
 # model
 report_freq: 10
