--- a/configs/train/bank_base.yml
+++ b/configs/train/bank_base.yml
@@ -6,7 +6,10 @@ name: bank-base
 data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/bank/bank-additional/bank-additional-full.csv
 #resume: ''
 #resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
-save: /data/yangjirui/vfl-tab-reconstruction/model/bank/v1/
+resume: /data/yangjirui/vfl-tab-reconstruction/model/bank/v3/best.pth.tar
+#save: /data/yangjirui/vfl-tab-reconstruction/model/bank/v1/
+# 从V3开始，正式进入论文的实验阶段
+save: /data/yangjirui/vfl-tab-reconstruction/model/bank/v3/
 
 # model
 report_freq: 10
