--- a/configs/train/credit_base.yml
+++ b/configs/train/credit_base.yml
@@ -5,8 +5,10 @@ name: credit-base
 # dir
 data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/credit/clients.xls
 #resume: ''
-#resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
-save: /data/yangjirui/vfl-tab-reconstruction/model/credit/v1/
+resume: /data/yangjirui/vfl-tab-reconstruction/model/credit/v3/best.pth.tar
+#save: /data/yangjirui/vfl-tab-reconstruction/model/credit/v1/
+# 从V3开始，正式进入论文的实验阶段
+save: /data/yangjirui/vfl-tab-reconstruction/model/credit/v3/
 
 # model
 report_freq: 10
