--- a/configs/attack/adult/data.yml
+++ b/configs/attack/adult/data.yml
@@ -1,5 +1,5 @@
 # project-info
-name: decoder-rebuild-2layer-all-data
+name: adult-base
 
 
 # dir
@@ -7,12 +7,12 @@ data_dir: /data/yangjirui/vfl-tab-reconstruction/dataset/adult/adult.data
 #resume: ''
 #resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
 #save: ''
-save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v2-2layer/
-base_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/best.pth.tar
-#decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
-decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch_noloss.pth.tar
+save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v3layer/
+base_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v5/best.pth.tar
+decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v5/attack-model/data_decoder120.pth.tar
 #origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
 #rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
+shadow_model: /data/yangjirui/vfl-tab-reconstruction/model/adult/v5/attack-model/data_shadow_model120.pth.tar
 
 # model
 report_freq: 10
@@ -31,9 +31,9 @@ batch_size: 64
 NIters: 1000
 Ndata: 10
 bloss: 0
-bloss2: 0
+bloss2: 1
 bloss2_v2: 0
-numloss: 0
+numloss: 0.1
 
 iloss: 0
 nloss: 0
