--- a/configs/attack/bank/model+data.yml
+++ b/configs/attack/bank/model+data.yml
@@ -3,14 +3,15 @@ name: decoder-rebuild-2layer-all-data
 
 
 # dir
-data_dir: /data/yangjirui/vfl-tab-reconstruction/dataset/adult/adult.data
+data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/bank/bank-additional/bank-additional-full.csv
 #resume: ''
 #resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
 #save: ''
-save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v2-2layer/
-base_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/best.pth.tar
+save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/bank/v5/
+base_mode: /data/yangjirui/vfl-tab-reconstruction/model/bank/v5/best.pth.tar
 #decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
-decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch_noloss.pth.tar
+#decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch_noloss.pth.tar
+decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/bank/v5/attack-model/model+data+.pth.tar
 #origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
 #rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
 
@@ -20,7 +21,7 @@ workers: 0
 
 
 # Hyperparameters
-lr: 0.1
+lr: 0.001
 momentum: 0.9
 weight_decay: 3e-5
 gamma: 0.97
