--- a/configs/train/bank_base.yml
+++ b/configs/train/bank_base.yml
@@ -4,12 +4,14 @@ name: bank-base
 
 # dir
 data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/bank/bank-additional/bank-additional-full.csv
+#data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/bank/bank-additional/bank_cleaned.csv
 #resume: ''
+
 #resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
-resume: /data/yangjirui/vfl-tab-reconstruction/model/bank/v3/best.pth.tar
+resume: /data/yangjirui/vfl-tab-reconstruction/model/bank/v5/best.pth.tar
 #save: /data/yangjirui/vfl-tab-reconstruction/model/bank/v1/
 # 从V3开始，正式进入论文的实验阶段
-save: /data/yangjirui/vfl-tab-reconstruction/model/bank/v3/
+save: /data/yangjirui/vfl-tab-reconstruction/model/bank/v5/
 
 # model
 report_freq: 10
