--- a/configs/attack/credit/nothing_ratio.yml
+++ b/configs/attack/credit/nothing_ratio.yml
@@ -1,16 +1,15 @@
 # project-info
-name: decoder-rebuild-2layer-all-data
+name: credit-nothing
 
 
 # dir
-data_dir: /data/yangjirui/vfl-tab-reconstruction/dataset/adult/adult.data
+data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/credit/clients.xls
 #resume: ''
 #resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
 #save: ''
-save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v2-2layer/
-base_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v6/best.pth.tar
-#decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
-decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v6/attack-model/model360.pth.tar
+save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/credit/ratio/
+base_mode: /data/yangjirui/vfl-tab-reconstruction/model/credit/ratio/best.pth.tar
+decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/credit/ratio/attack-model/nothing-true64+.pth.tar
 #origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
 #rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
 
@@ -20,7 +19,7 @@ workers: 0
 
 
 # Hyperparameters
-lr: 0.001
+lr: 0.1
 momentum: 0.9
 weight_decay: 3e-5
 gamma: 0.97
@@ -31,9 +30,9 @@ batch_size: 64
 NIters: 1000
 Ndata: 10
 bloss: 0
-bloss2: 0
+bloss2: 10
 bloss2_v2: 0
-numloss: 0
+numloss: 1
 
 iloss: 0
 nloss: 0
