--- a/configs/train/cifar10_base.yml
+++ b/configs/train/cifar10_base.yml
@@ -5,20 +5,22 @@ name: cifar10-base
 # dir
 data_dir: /data/yangjirui/vfl/vfl-tab-reconstruction/dataset/cifar10/
 #resume: ''
-resume: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v1/best.pth.tar
+resume: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/best.pth.tar
 # 从V3开始，正式进入论文的实验阶段
-save: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v1/
+save: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/
 
 # model
 report_freq: 10
-workers: 8
+workers: 32
 
 
 # Hyperparameters
-lr: 0.001
-momentum: 0.9
-weight_decay: 3e-5
-gamma: 0.97
-epochs: 120
+lr: 0.02
+# momentum: 0.9
+# weight_decay: 3e-5
+# gamma: 0.97
+alpha: 0.05
+eps: 1.0
+epochs: 100
 batch_size: 64
 
