--- a/configs/attack/cifar10/model.yml
+++ b/configs/attack/cifar10/model.yml
@@ -1,5 +1,5 @@
 # project-info
-name: cifar10
+name: decoder-rebuild-2layer-all-data
 
 
 # dir
@@ -9,12 +9,10 @@ data_dir: /data/yangjirui/vfl/vfl-tab-reconstruction/dataset/cifar10/
 #save: ''
 save: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/
 base_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/best.pth.tar
-# decoder_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/data_decoder120.pth.tar
-decoder_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/data_decoder120v2.pth.tar
+#decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
+decoder_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/model360.pth.tar
 #origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
 #rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
-# shadow_model: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/data_shadow_model120.pth.tar
-shadow_model: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/data_shadow_model120v2.pth.tar
 
 # model
 report_freq: 10
@@ -33,9 +31,9 @@ batch_size: 64
 NIters: 1000
 Ndata: 10
 bloss: 0
-bloss2: 1
+bloss2: 0
 bloss2_v2: 0
-numloss: 0.1
+numloss: 0
 
 iloss: 0
 nloss: 0
