--- a/configs/attack/cifar10/nothing.yml
+++ b/configs/attack/cifar10/nothing.yml
@@ -1,20 +1,18 @@
 # project-info
-name: cifar10
+name: adult-base
 
 
 # dir
+# dir
 data_dir: /data/yangjirui/vfl/vfl-tab-reconstruction/dataset/cifar10/
 #resume: ''
-#resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
-#save: ''
+# resume: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/best.pth.tar
+# 从V3开始，正式进入论文的实验阶段
 save: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/
 base_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/best.pth.tar
-# decoder_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/data_decoder120.pth.tar
-decoder_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/data_decoder120v2.pth.tar
+decoder_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/nothing.pth.tar
 #origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
 #rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
-# shadow_model: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/data_shadow_model120.pth.tar
-shadow_model: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/data_shadow_model120v2.pth.tar
 
 # model
 report_freq: 10
@@ -22,7 +20,7 @@ workers: 0
 
 
 # Hyperparameters
-lr: 0.001
+lr: 0.1
 momentum: 0.9
 weight_decay: 3e-5
 gamma: 0.97
@@ -33,9 +31,9 @@ batch_size: 64
 NIters: 1000
 Ndata: 10
 bloss: 0
-bloss2: 1
+bloss2: 10
 bloss2_v2: 0
-numloss: 0.1
+numloss: 1
 
 iloss: 0
 nloss: 0
