--- a/configs/attack/adult/data.yml
+++ b/configs/attack/adult/data.yml
@@ -3,16 +3,16 @@ name: adult-base
 
 
 # dir
-data_dir: /data/yangjirui/vfl-tab-reconstruction/dataset/adult/adult.data
+data_dir: ./dataset/adult/adult.data
 #resume: ''
-#resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
+#resume: ./model/adult/v0/best.pth.tar
 #save: ''
-save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v6/
-base_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v6/best.pth.tar
-decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v6/attack-model/data_decoder120.pth.tar
-#origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
-#rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
-shadow_model: /data/yangjirui/vfl-tab-reconstruction/model/adult/v6/attack-model/data_shadow_model120.pth.tar
+save: ./output/rebuild-data/adult/data/
+base_mode: ./model/adult/base/v0/best.pth.tar
+decoder_mode: ./model/adult/attack-model/v0/data_decoder120.pth.tar
+#origin_data_output: ./rebuild-data/adult/v1/origin_data.csv
+#rebuild_data_output: ./rebuild-data/adult/v1/rebuild_data.csv
+shadow_model: ./model/adult/attack-model/v0/data_shadow_model120.pth.tar
 
 # model
 report_freq: 10
