--- a/configs/attack/adult/model+data.yml
+++ b/configs/attack/adult/model+data.yml
@@ -3,15 +3,15 @@ name: decoder-rebuild-2layer-all-data
 
 
 # dir
-data_dir: /data/yangjirui/vfl-tab-reconstruction/dataset/adult/adult.data
+data_dir: ./dataset/adult/adult.data
 #resume: ''
 #resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
 #save: ''
-save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v6/
-base_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v6/best.pth.tar
+save: ./output/rebuild-data/adult/
+base_mode: ./model/adult/base/v0/best.pth.tar
 #decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
 #decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch_noloss.pth.tar
-decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v6/attack-model/model+data360-t+.pth.tar
+decoder_mode: ./model/adult/attack-model/v1/model+data.pth.tar
 #origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
 #rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
 
@@ -21,7 +21,7 @@ workers: 0
 
 
 # Hyperparameters
-lr: 0.001
+lr: 0.01
 momentum: 0.9
 weight_decay: 3e-5
 gamma: 0.97
