--- a/configs/train/credit_base.yml
+++ b/configs/train/credit_base.yml
@@ -3,12 +3,12 @@ name: credit-base
 
 
 # dir
-data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/credit/clients.xls
+data_dir: ./dataset/credit/clients.xls
 #resume: ''
-resume: /data/yangjirui/vfl-tab-reconstruction/model/credit/v6/best.pth.tar
+resume: ./model/credit/base/v0/best.pth.tar
 #save: /data/yangjirui/vfl-tab-reconstruction/model/credit/v1/
 # 从V3开始，正式进入论文的实验阶段
-save: /data/yangjirui/vfl-tab-reconstruction/model/credit/v6/
+save: ./model/credit/base/v0/
 
 # model
 report_freq: 10
