--- a/configs/attack/adult/model+data.yml
+++ b/configs/attack/adult/model+data.yml
@@ -5,15 +5,15 @@ name: decoder-rebuild-2layer-all-data
 # dir
 data_dir: ./dataset/adult/adult.data
 #resume: ''
-#resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
+#resume: ./model/adult/v0/best.pth.tar
 #save: ''
 save: ./output/rebuild-data/adult/
 base_mode: ./model/adult/base/v0/best.pth.tar
-#decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
-#decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch_noloss.pth.tar
+#decoder_mode: ./model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
+#decoder_mode: ./model/adult/v2-2layer/attack-model/decoder_model_360epoch_noloss.pth.tar
 decoder_mode: ./model/adult/attack-model/v1/model+data.pth.tar
-#origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
-#rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
+#origin_data_output: ./rebuild-data/adult/v1/origin_data.csv
+#rebuild_data_output: ./rebuild-data/adult/v1/rebuild_data.csv
 
 # model
 report_freq: 10
