--- a/configs/attack/bank/model.yml
+++ b/configs/attack/bank/model.yml
@@ -3,16 +3,16 @@ name: decoder-rebuild-2layer-all-data
 
 
 # dir
-data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/bank/bank-additional/bank-additional-full.csv
+data_dir: ./dataset/bank/bank-additional/bank-additional-full.csv
 #resume: ''
-#resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
+#resume: ./model/adult/v0/best.pth.tar
 #save: ''
-save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/bank/v5/
-base_mode: /data/yangjirui/vfl-tab-reconstruction/model/bank/v5/best.pth.tar
-#decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
-decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/bank/v5/attack-model/model.pth.tar
-#origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
-#rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
+save: ./rebuild-data/bank/v5/
+base_mode: ./model/bank/v5/best.pth.tar
+#decoder_mode: ./model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
+decoder_mode: ./model/bank/v5/attack-model/model.pth.tar
+#origin_data_output: ./rebuild-data/adult/v1/origin_data.csv
+#rebuild_data_output: ./rebuild-data/adult/v1/rebuild_data.csv
 
 # model
 report_freq: 10
