--- a/configs/attack/cifar10/model+data.yml
+++ b/configs/attack/cifar10/model+data.yml
@@ -3,15 +3,15 @@ name: model+data
 
 
 # dir
-data_dir: /data/yangjirui/vfl/vfl-tab-reconstruction/dataset/cifar10/
+data_dir: ./dataset/cifar10/
 #resume: ''
-# resume: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/best.pth.tar
+# resume: ./model/cifar10/v6/best.pth.tar
 # 从V3开始，正式进入论文的实验阶段
-save: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/
-base_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/best.pth.tar
+save: ./model/cifar10/v6/
+base_mode: ./model/cifar10/v6/best.pth.tar
 #decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch-loss.pth.tar
 #decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/adult/v2-2layer/attack-model/decoder_model_360epoch_noloss.pth.tar
-decoder_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/model+data+.pth.tar
+decoder_mode: ./model/cifar10/v6/attack-model/model+data+.pth.tar
 #origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
 #rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
 
