--- a/configs/attack/cifar10/nothing.yml
+++ b/configs/attack/cifar10/nothing.yml
@@ -4,13 +4,13 @@ name: adult-base
 
 # dir
 # dir
-data_dir: /data/yangjirui/vfl/vfl-tab-reconstruction/dataset/cifar10/
+data_dir: ./dataset/cifar10/
 #resume: ''
-# resume: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/best.pth.tar
+# resume: ./model/cifar10/v6/best.pth.tar
 # 从V3开始，正式进入论文的实验阶段
-save: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/
-base_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/best.pth.tar
-decoder_mode: /data/yangjirui/vfl/vfl-tab-reconstruction/model/cifar10/v6/attack-model/nothing.pth.tar
+save: ./model/cifar10/v6/
+base_mode: ./model/cifar10/v6/best.pth.tar
+decoder_mode: ./model/cifar10/v6/attack-model/nothing.pth.tar
 #origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
 #rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
 
