--- a/configs/attack/credit/nothing.yml
+++ b/configs/attack/credit/nothing.yml
@@ -3,15 +3,15 @@ name: credit-nothing
 
 
 # dir
-data_dir: /home/yangjirui/data/vfl-tab-reconstruction/dataset/credit/clients.xls
+data_dir: ./dataset/credit/clients.xls
 #resume: ''
-#resume: /data/yangjirui/vfl-tab-reconstruction/model/adult/v0/best.pth.tar
+#resume: ./model/adult/v0/best.pth.tar
 #save: ''
-save: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/credit/v6/
-base_mode: /data/yangjirui/vfl-tab-reconstruction/model/credit/v6/best.pth.tar
-decoder_mode: /data/yangjirui/vfl-tab-reconstruction/model/credit/v6/attack-model/nothing-true64+.pth.tar
-#origin_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/origin_data.csv
-#rebuild_data_output: /data/yangjirui/vfl-tab-reconstruction/rebuild-data/adult/v1/rebuild_data.csv
+save: ./rebuild-data/credit/v6/
+base_mode: ./model/credit/v6/best.pth.tar
+decoder_mode: ./model/credit/v6/attack-model/nothing-true64+.pth.tar
+#origin_data_output: ./rebuild-data/adult/v1/origin_data.csv
+#rebuild_data_output: ./rebuild-data/adult/v1/rebuild_data.csv
 
 # model
 report_freq: 10
